- The ignorePost method is introduced in DB_Proxy class for ignoring the $_POST values in adviser class.
- In the context with 'aggregation-*' value, if the 'paging' is true, the pagination works fine. You should
  use this carefully because pagination requires to count total records and it could be a perforance issue.
- Update TestDB.fmp12 and TestDB_clone.fmp12 to modify the Serial Number setting of 'asset_id' field.
- [SECURITY FIX] Address an issue with some SMTP servers that could lead to the Bcc email recipients 
  being shown inappropriately.
- [BUG FIX] addCondition method's third was eliminated, the matching feature is activated anytime.
  So when the 3rd parameter is nothing, the matching follows the value of
  INTERMediator_DBAdapter.eliminateDuplicatedConditions.
- [BUG FIX] Fix the issue of MediaAccess class and the file upload component when using the Native
  Authentication for mobile devices. The affected version is 5.3 only.
- [BUG FIX] INTERMediatorOnPage.defaultBackgroundImage affects as expected.
- [BUG FIX] String array value for single value operator works fine.
- [BUG FIX] Modify the value of INTERMediatorOnPage.getIMRootPath on Windows Server.
- [BUG FIX] Update FX.php to fix compatibility with authentication for FileMaker Server.
- [BUG FIX] Enrolment methods had a bug in case of FileMaker Server with issuedhash for SQLite.
- [BUG FIX] When the text field bond to local context didn't update calculated property.
- [BUG FIX] Authentication prevented in case of just specify on the second parameter of IM_Entry.
- [BUG FIX] Fix DB_FileMaker_FX class not to throw an exception when failed to convert a value 
  using DataConverter classes.
- [BUG FIX] Fix showing a portal record when using portal access mode for FileMaker Server and a
  count of related records on the portal object is 1 (Thanks to Kiyonori Ito).
- [BUG FIX] Fix showing a portal record when using portal access mode for FileMaker Server and