@@ -324,6 +324,13 @@ CREATE TABLE authuser (
     limitdt             DateTime
 );
 
+CREATE INDEX authuser_username
+  ON authuser (username);
+CREATE INDEX authuser_email
+  ON authuser (email);
+CREATE INDEX authuser_limitdt
+  ON authuser (limitdt);
+
 INSERT INTO authuser(id,username,hashedpasswd) VALUES(1,'user1','d83eefa0a9bd7190c94e7911688503737a99db0154455354');
 INSERT INTO authuser(id,username,hashedpasswd) VALUES(2,'user2','5115aba773983066bcf4a8655ddac8525c1d3c6354455354');
 INSERT INTO authuser(id,username,hashedpasswd) VALUES(3,'user3','d1a7981108a73e9fbd570e23ecca87c2c5cb967554455354');
@@ -358,6 +365,13 @@ CREATE TABLE authcor (
 	privname			TEXT
 );
 
+CREATE INDEX authcor_user_id
+  ON authcor (user_id);
+CREATE INDEX authcor_group_id
+  ON authcor (group_id);
+CREATE INDEX authcor_dest_group_id
+  ON authcor (dest_group_id);
+
 INSERT INTO authcor(user_id,dest_group_id) VALUES(1,1);
 INSERT INTO authcor(user_id,dest_group_id) VALUES(2,1);
 INSERT INTO authcor(user_id,dest_group_id) VALUES(3,1);
@@ -374,6 +388,15 @@ CREATE TABLE issuedhash (
 	hash            TEXT,
 	expired			DateTime
 );
+
+CREATE INDEX issuedhash_user_id
+  ON issuedhash (user_id);
+CREATE INDEX issuedhash_expired
+  ON issuedhash (expired);
+CREATE INDEX issuedhash_clienthost
+  ON issuedhash (clienthost);
+CREATE INDEX issuedhash_user_id_clienthost
+  ON issuedhash (user_id, clienthost);
 
 /* # Sample Data */
 INSERT INTO product(name,id,category_id,unitprice,photofile,acknowledgement,ack_link)
